tests/miniJava/neg/006752_mutation.MiniJava
class java { this static void Main ( String [ ] java ) { { } } }
